Splitting out names for project collision issues

--- a/devops/redmine_dev/docker-compose.yml
+++ b/devops/redmine_dev/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   php:
     build:
       context: ../images
-      dockerfile: php.Dockerfile
+      dockerfile: redmine_php.Dockerfile
 
   nginx:
     build:
