Updates and additional refactoring

--- a/devops/redmine_prod/docker-compose.override.yml.example
+++ b/devops/redmine_prod/docker-compose.override.yml.example
@@ -5,7 +5,7 @@ services:
     volumes:
       - <path to solution>/symfony:/var/www/symfony/
     environment:
-      APP_ENV: dev
+      APP_ENV: prod
 
   nginx:
     volumes:
