--- a/devops/redmine_prod/docker-compose.yml
+++ b/devops/redmine_prod/docker-compose.yml
@@ -3,11 +3,13 @@ version: "3.7"
 services:
   php:
     image: redmine_monitor:latest
+    restart: always
 
   nginx:
     build:
       context: ../images
       dockerfile: nginx.Dockerfile
+    restart: always
     depends_on:
       - php
     ports:
